docs/2.12/tutorial/index.mdx
---
title: Tutorial Overview
sidebarTitle: Overview
description: This tutorial provides a guided walk-through of Prefect core concepts and instructions on how to use them.
---


By the end of this tutorial you will have:

1. [Created a flow](/2.12/tutorial/flows/)
2. [Added tasks to it](/2.12/tutorial/tasks/)
3. [Deployed and run the flow](/2.12/tutorial/deployments/)

These three topics will get most users ready for their first production deployment. 

Advanced users that need more governance and control of their workflow infrastructure can go one step further by:

4. [Creating a work pool & worker](/2.12/tutorial/workers/)

If you're looking for examples of more advanced operations (like [deploying on Kubernetes](/2.12/guides/deployment/helm-worker/)), check out Prefect's [guides](/2.12/guides/).

## Prerequisites

1. Before you start, make sure you have Python installed, then install Prefect: `pip install -U prefect`
      1. See the [install guide](/2.12/getting-started/installation/) for more detailed instructions.

2. This tutorial requires the Prefect API, so sign up for a forever free [Prefect Cloud Account](https://app.prefect.cloud/) or, alternatively, self-host a [Prefect Server](/2.12/host/).

## What is Prefect?

Prefect orchestrates workflows — it simplifies the creation, scheduling, and monitoring of complex data pipelines. With Prefect, you define workflows as Python code and let it handle the rest.

Prefect also provides error handling, retry mechanisms, and a user-friendly dashboard for monitoring. It's the easiest way to transform any Python function into a unit of work that can be observed and orchestrated.

Just bring your Python code, sprinkle in a few decorators, and go!

## [First steps: Flows](/2.12/tutorial/flows/)

Let's begin by learning how to create your first Prefect flow - [click here to get started](/2.12/tutorial/flows/).