docs/2.14/tutorial/index.mdx
---
title: Tutorial Overview
sidebarTitle: Overview
---


This tutorial provides a guided walk-through of Prefect core concepts and instructions on how to use them.

By the end of this tutorial you will have:

1. [Created a flow](/2.14/tutorial/flows/)
2. [Added tasks to it](/2.14/tutorial/tasks/)
3. [Deployed and run the flow locally](/2.14/tutorial/deployments/)
4. [Created a work pool and run the flow remotely](/2.14/tutorial/work-pools/)

These four topics will get most users to their first production deployment.

Advanced users that need more governance and control of their workflow infrastructure can go one step further by:

5. [Using a worker-based deployment](/2.14/tutorial/workers/)

If you're looking for examples of more advanced operations (like [deploying on Kubernetes](/2.14/guides/deployment/kubernetes/)), check out Prefect's [guides](/2.14/guides/).

## Prerequisites

1. Before you start, make sure you have Python installed, then install Prefect: `pip install -U prefect`

See the [install guide](/2.14/getting-started/installation/) for more detailed instructions, if needed.

2. To use Prefect, you need to self-host a Prefect server or connect to [Prefect Cloud](https://app.prefect.cloud).

To get the most out of this tutorial, we recommend using Prefect Cloud.
Sign up for a forever free [Prefect Cloud account](/2.14/cloud/) or accept your organization's invite to join their Prefect Cloud account.

1. Create a new account or sign in at [https://app.prefect.cloud/](https://app.prefect.cloud/).
1. Use the `prefect cloud login` CLI command to [authenticate to Prefect Cloud](/2.14/cloud/users/api-keys/) from your environment.

<div class="terminal">

```bash
prefect cloud login
```

</div>

Choose **Log in with a web browser** and click the **Authorize** button in the browser window that opens.

As an alternative to using Prefect Cloud, you can self-host a [Prefect server instance](/2.14/host/).
If you choose this option, run `prefect server start` to start a local Prefect server instance.

## What is Prefect?

Prefect orchestrates workflows — it simplifies the creation, scheduling, and monitoring of complex data pipelines.
With Prefect, you define workflows as Python code and let it handle the rest.

Prefect also provides error handling, retry mechanisms, and a user-friendly dashboard for monitoring.
It's the easiest way to transform any Python function into a unit of work that can be observed and orchestrated.

Just bring your Python code, sprinkle in a few decorators, and go!

## [First steps: Flows](/2.14/tutorial/flows/)

Let's begin by learning how to create your first Prefect flow - [click here to get started](/2.14/tutorial/flows/).
